[package]
name = "fec"
version = "0.1.0"
authors = ["Brian Armstrong <brian.armstrong.ece+github@gmail.com>"]
description = "Library for forward error correction. Currently contains encoder/decoder for convolutional codes"
license = "BSD-3-Clause"

[dependencies]
lazy_static = "1.1.0"

[profile.release]
debug = true
